--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,6 +38,7 @@ body {
     border-radius: 4px;
     padding: 4px;
     width: 100px;
+
 }
 
 .menu {
@@ -55,12 +56,19 @@ body {
 
 .chest {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     background-color: rgb(191, 255, 0);
-    padding: 30px;
+    padding: 50px;
     gap: 30px;
+}
+
+.chestimages {
+    border: 4px solid lightskyblue;
+    border-radius: 10%;
+    height: 100px;
+    width: 100px;
 }
 
 .images {
@@ -80,6 +88,7 @@ body {
 .quote {
     display: flex;
     flex-direction: column;
+
 }
 
 .feelsstrongman {
@@ -105,23 +114,25 @@ body {
     display: flex;
 }
 
-.legalstuff {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: grey;
-    flex-grow: 1;
-    padding: 15px;
+.signupad {
+    border-radius: 4px;
+    width: 90px;
+    padding: 3px;
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    font-weight: 600;
 }
 
 .footercontainer {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: lime;
-    width: 500px;
+    background-color: rgb(14, 104, 221);
+    width: 600px;
     height: 100px;
     border-radius: 6px;
+    color: white;
 }
 
 a {
@@ -130,7 +141,13 @@ a {
     font-size: small;
 }
 
-.chestimages {
-    border: 4px solid lightskyblue;
-    border-radius: 20%;
+.legalstuff {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(53, 50, 50);
+    flex-grow: 1;
+    padding: 15px;
+    color: whitesmoke;
+    font-weight: 600;
 }
